Fix overflow issues

--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@ html,
 body {
 	height: 100%;
 	font-family: Lato, sans-serif;
-	overflow: none;
+	overflow: hidden;
 }
 
 /*
